se sacan promedios

--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -80,32 +80,32 @@
                                 </thead>
                                 <tbody>
                                 <tr>
-                                    <td>Think-Develop and Share</td>
+                                    <td class="uk-text-left">Think-Develop and Share</td>
                                     <td><h:outputText id="mapamental-pendiente2" value=" ${detalleProfesorControlador.tareasPendientesGrupoModelo.mapamentalPendientes}"/></td>
                                     <td> <h:outputText id="mapamental-total2"  value="${detalleProfesorControlador.tareasPendientesGrupoModelo.mapamentalTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td>Comprehension Match</td>
+                                    <td class="uk-text-left">Comprehension Match</td>
                                     <td> <h:outputText id="relacionar-oracion-pendiete2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.relacionarOracionPendiete}"/></td>
                                     <td><h:outputText id="relacionar-oracion-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.relacionarOracionTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td>Transcript</td>
+                                    <td class="uk-text-left">Transcript</td>
                                     <td><h:outputText id="oraciones-pendiete2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.oracionesPendiete}"/></td>
                                     <td> <h:outputText id="oraciones-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.oracionesTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td>What Happened?</td>
+                                    <td class="uk-text-left">What Happened?</td>
                                     <td><h:outputText id="gramatica-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.gramaticaPendiente}"/></td>
                                     <td><h:outputText id="gramatica-pendiente2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.gramaticaTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td>Mix&amp;Match</td>
+                                    <td class="uk-text-left">Mix&amp;Match</td>
                                     <td><h:outputText id="relacionar-pendiente2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.relacionarPendiente}"/></td>
                                     <td><h:outputText id="relacionar-total2" value=" ${detalleProfesorControlador.tareasPendientesGrupoModelo.relacionarTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td>Gap Filling</td>
+                                    <td class="uk-text-left">Gap Filling</td>
                                     <td><h:outputText id="completar-pendiete2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.completarPendiente}"/></td>
                                     <td><h:outputText id="completar-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.completarTotal}"/></td>
                                 </tr>
@@ -210,31 +210,31 @@
                                     </thead>
                                     <tbody>
                                     <tr>
-                                        <td>Comprehension Match</td>
+                                        <td class="uk-text-left">Comprehension Match</td>
                                         <td>#{promedioAlumnoModelo.promedioRelacionarOracion eq null ? 'sin actividad': promedioAlumnoModelo.promedioRelacionarOracion}</td>
                                     </tr>
                                     <tr>
-                                        <td>Word Game</td>
+                                        <td class="uk-text-left">Word Game</td>
                                         <td>${promedioAlumnoModelo.promedioGramatica eq null ? 'sin actividad' :  promedioAlumnoModelo.promedioGramatica}</td>
                                     </tr>
                                     <tr>
-                                        <td>Transcript</td>
+                                        <td class="uk-text-left">Transcript</td>
                                         <td>${promedioAlumnoModelo.promedioTranscipcion eq null ? 'sin actividad' : promedioAlumnoModelo.promedioTranscipcion}</td>
                                     </tr>
                                     <tr>
-                                        <td>What Happened?</td>
+                                        <td class="uk-text-left">What Happened?</td>
                                         <td>${promedioAlumnoModelo.promedioOraciones eq null ? 'sin actividad' : promedioAlumnoModelo.promedioOraciones}</td>
                                     </tr>
                                     <tr>
-                                        <td>Mix&amp;Match</td>
+                                        <td class="uk-text-left">Mix&amp;Match</td>
                                         <td>${promedioAlumnoModelo.promedioRelacionarImagen eq null ? 'sin actividad' : promedioAlumnoModelo.promedioRelacionarImagen}</td>
                                     </tr>
                                     <tr>
-                                        <td>Gap Filling</td>
+                                        <td class="uk-text-left">Gap Filling</td>
                                         <td>${promedioAlumnoModelo.promedioCompletar eq null ? 'sin actividad' : promedioAlumnoModelo.promedioCompletar}</td>
                                     </tr>
                                     <tr>
-                                        <td>Think-Develop and Share</td>
+                                        <td class="uk-text-left">Think-Develop and Share</td>
                                         <td>${promedioAlumnoModelo.promedioPromedioMapamental eq null ? 'sin actividad' : promedioAlumnoModelo.promedioPromedioMapamental}</td>
                                     </tr>
                                     </tbody>
