--- a/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
@@ -97,7 +97,7 @@
                 </h:column>
                 <h:column>
                     <h:outputText value="${alumnoModelo.momento}">
-                        <f:convertDateTime pattern="hh:mm:ss"/>
+                        <f:convertDateTime pattern="HH:mm:ss"/>
                     </h:outputText>
                 </h:column>
             </h:dataTable>
