dropdown tabla grupo coordinador detalle profesor

--- a/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/detalle-profesor.xhtml
@@ -90,12 +90,12 @@
                                     <td><h:outputText id="relacionar-oracion-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.relacionarOracionTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td class="uk-text-left">Transcript</td>
+                                    <td class="uk-text-left">What Happened?</td>
                                     <td><h:outputText id="oraciones-pendiete2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.oracionesPendiete}"/></td>
                                     <td> <h:outputText id="oraciones-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.oracionesTotal}"/></td>
                                 </tr>
                                 <tr>
-                                    <td class="uk-text-left">What Happened?</td>
+                                    <td class="uk-text-left">Word game</td>
                                     <td><h:outputText id="gramatica-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.gramaticaPendiente}"/></td>
                                     <td><h:outputText id="gramatica-pendiente2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.gramaticaTotal}"/></td>
                                 </tr>
@@ -109,6 +109,7 @@
                                     <td><h:outputText id="completar-pendiete2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.completarPendiente}"/></td>
                                     <td><h:outputText id="completar-total2" value="${detalleProfesorControlador.tareasPendientesGrupoModelo.completarTotal}"/></td>
                                 </tr>
+
                                 </tbody>
                             </table>
                         </h:panelGroup>
