--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -88,7 +88,7 @@
         <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/alumno/dashboard.css"/>
         <div class="">
             <div class="uk-container padding-contenedor">
-                <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1>
+                <h1 class="lescuadron letra-titulo primera-mayuscula">#{alumno['dashboard.title']}</h1> #{alumnoControlador.personaActivaModelo.bloqueado}
                  <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
                      <div class="uk-width-1-3@m">
                          <div class="uk-card uk-card-default color-card-dashboard-alumno border-grosor">
