--- a/tecolotl-web/src/main/webapp/sin-permiso.xhtml
+++ b/tecolotl-web/src/main/webapp/sin-permiso.xhtml
@@ -11,6 +11,7 @@
     <h:outputStylesheet library="css" name="sin-permiso.css"/>
 </h:head>
 <h:body>
+    #{facesContext.externalContext.invalidateSession()}
     <p class="letras-animadas"><span>O</span><span>o</span><span>p</span><span>s</span><span>!</span></p>
     <p class="animacion-dos sin-acceso">SIN ACCESO</p>
     <div class="imagenes-vista">
@@ -19,6 +20,7 @@
         <h:graphicImage library="img" name="/mounstro/whose.svg"/>
     </div>
     <p class="uk-margin-medium-top">Comunícate con el administrador </p>
+    <h:button outcome="regresar" value="#{boton['back']}"/>
     <h:outputScript library="js" name="uikit.js"/>
     <script type="application/javascript">
         document.addEventListener('DOMContentLoaded',()=>{
