--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -53,7 +53,7 @@
                         <div class="uk-grid uk-grid-small">
                             <div class="uk-width-1-3">
                                 <h4 class="uk-text-capitalize">
-                                    <span class="uk-text-middle">#{administracion['dashboard.titulo']}</span>
+                                    <span class="uk-text-middle">#{administracion['dashboard.title']}</span>
                                 </h4>
                             </div>
                             <div class="uk-width-1-3">
